--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <html>
     <head>
-      <script src="index.js"></script>
+      <script defer src="index.js"></script>
+      <link rel="stylesheet" href="style.css">
     </head>
     <body>
-      <h1> CODE YOUR SOLUTION </h1>      
+      <h1> To-do List </h1>   
+      <form id="todo">
+        <input id="list" type="text" name="list" placeholder="type here"/>
+        <input type="submit" value="Submit"/>
+      </form>
+      <p></p>
+      <ul>
+
+      </ul>   
     </body>
 </html>
+
